# projectA-py

./: .gitignore  README.md  config-example.py  index.html  pyproject.toml
.github/workflows/: codeql.yml
bonfire/: main.py  websocket.py
delta/: main.py
delta/routers/: auth.py  tasks.py  users.py
quark/: database.py  models.py  schemas.py  utils.py
